--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "echarts": "^4.9.0",
     "echarts-for-react": "^2.0.16",
     "firebase": "^8.1.1",
     "google-maps-react": "^2.0.6",
+    "html-to-draftjs": "^1.5.0",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
