--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-to-draftjs": "^1.5.0",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
+    "import": "^0.0.6",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.20",
