--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
     "import": "^0.0.6",
+    "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "leaflet": "^1.7.1",
     "lodash": "^4.17.20",
@@ -44,6 +45,7 @@
     "moment-timezone": "^0.5.32",
     "node-sass": "^4.14.1",
     "nouislider-react": "^3.3.9",
+    "npm": "^7.12.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
